overlay/etc/iptables.conf
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [4:218]
:OUTPUT ACCEPT [1:52]
-A PREROUTING -i eth1 -p tcp -j REDIRECT --to-ports 31337 
-A PREROUTING -i eth1 -p udp -m udp --dport 53 -j REDIRECT --to-ports 1253 
-A OUTPUT -p udp -m udp --dport 53 -j REDIRECT --to-ports 1253 
-A OUTPUT -o lo -j RETURN 
-A OUTPUT -m owner --uid-owner tor -j RETURN 
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 31337 
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 10.232.64.0/24 -d 10.232.64.1/32 -i eth1 -p tcp -m tcp --dport 31337 -j ACCEPT 
-A INPUT -s 10.232.64.0/24 -d 10.232.64.1/32 -i eth1 -p udp -m udp --dport 1253 -j ACCEPT 
-A INPUT -i eth1 -p udp -m udp --sport 68 --dport 67 -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -m owner --uid-owner tor -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -d 127.0.0.1/32 -j ACCEPT 
COMMIT
